application is downloading files

--- a/core/templates/user/dashboard.html
+++ b/core/templates/user/dashboard.html
@@ -51,7 +51,7 @@
                               <span><b>Upload Date: </b>{{file.date}}</span>
                               <span><b>Size: </b>{{file.size}}</span>
                               <span><b>sha256: </b>{{file.hash}}</span>
-                              <span> </span> <a href="/api/v1/user/files/{{file.id}}/download" class="btn btn-success btn-sm">Download</a>
+                              <span> </span> <a href="/api/v1/user/files/{{file.filename}}/download" class="btn btn-success btn-sm">Download</a>
                             {% endif %}
                           </li>
                       {% endfor %}
