--- a/core/templates/user/dashboard.html
+++ b/core/templates/user/dashboard.html
@@ -34,7 +34,7 @@
                 <form action="/api/v1/user/upload-file" method="POST" enctype="multipart/form-data">
                   <div class="form-group">
                     <div class="custom-file">
-                      <input type="file" class="custom-file-input" name="file" id="fileinput">
+                      <input type="file" class="custom-file-input" name="file" id="file">
                       <label class="custom-file-label" for="file"></label>
                     </div>
                   </div>
