added minor changes

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -35,7 +35,7 @@
   
           <div class="form-group">
             <label for="password"></label>
-            <input placeholder="password" class="form-control" type="text" name="password">
+            <input placeholder="password" class="form-control" type="password" name="password">
           </div>
   
           <button style="margin-top:1.3em;" type="submit" class="btn btn-primary"> Sign up </button>
