--- a/core/templates/public/login.html
+++ b/core/templates/public/login.html
@@ -39,7 +39,7 @@
   
           <div class="form-group">
             <label for="password"></label>
-            <input placeholder="password" class="form-control" type="text" name="password">
+            <input placeholder="password" class="form-control" type="password" name="password">
           </div>
     
             <button onclick="getUsers()" style="margin-top:1.3em;" class="btn btn-primary" id="submit">Login</button>
